# libtnc

./: .clinerules  .gitignore  CMakeLists.txt  Makefile  README.md
include/: buffer.h  common.h  poller.h  socket.h  tcp.h  udp.h  uds.h
src/: hldc.c  libtnc_echo.c  poller.c  socket.c  tcp.c  udp.c  uds.c  uds_dgram.c
test/: main_test.c  test_poller.h  test_selector.h  test_tcp.h  test_udp.h  test_uds.h  test_uds_dgram.h
